# lattice

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini
audio/: AudioInterface.cpp  AudioInterface.h  AudioThread.cpp  AudioThread.h
include/: BufferManager.h  audio_handler.h  automaton_2d.h  computationworker.h  simulationworker.h  stb_image_write.h  visualizer.h
src/: audio_handler.cpp  automaton_2d.cpp  computationworker.cpp  implementations.cpp  main.cpp  simulationworker.cpp  visualizer.cpp  webgpu-utils.cpp
